--- a/blogr-landing-page/style.css
+++ b/blogr-landing-page/style.css
@@ -7,6 +7,7 @@
 
 body {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -334,7 +335,6 @@ footer a:hover {
         margin-bottom: 0;
         cursor: pointer;
         color: #fff;
-        pointer-events: none;
     }
 
     .navbar-link:hover {
@@ -352,6 +352,10 @@ footer a:hover {
         position: absolute;
         left: 50%;
         opacity: 1;
+    }
+
+    .navbar-link.is-active:after {
+        transform: rotate(0);
     }
 
     .navbar-link:after {
@@ -386,7 +390,7 @@ footer a:hover {
     }
 
     .navbar-dropdown {
-        margin-top: 1rem;
+        margin-top: .5rem;
         background: #fff;
         padding: 2rem;
     }
@@ -404,6 +408,7 @@ footer a:hover {
     #navbarCompany.navbar-dropdown.is-active,
     #navbarConnect.navbar-dropdown.is-active {
         position: absolute;
+        transform: translateX(-50%) scale(1, 0);
     }
 
     .navbar-buttons {
