--- a/sunnyside-agency-landing-page/src/index.css
+++ b/sunnyside-agency-landing-page/src/index.css
@@ -25,7 +25,7 @@ body {
   position: absolute;
   width: 100%;
   min-height: 100%;
-  background: no-repeat center/100% auto url("/../public/header/image-header.jpg");
+  background: no-repeat center/100% auto url("../public/header/image-header.jpg");
   z-index: -1;
 }
 .header-bg .header {
@@ -158,7 +158,7 @@ body {
   position: absolute;
   width: 100%;
   min-height: 100%;
-  background: no-repeat center/100% auto url("/../public/image-graphic-design.jpg");
+  background: no-repeat center/100% auto url("../public/image-graphic-design.jpg");
   z-index: -1;
 }
 .section-graphic-design-bg .section-graphic-design {
@@ -187,7 +187,7 @@ body {
   position: absolute;
   width: 100%;
   min-height: 100%;
-  background: no-repeat center/100% auto url("/../public/image-photography.jpg");
+  background: no-repeat center/100% auto url("../public/image-photography.jpg");
   z-index: -1;
 }
 .section-photography-bg .section-photography {
@@ -289,7 +289,7 @@ body {
     position: absolute;
     width: 100%;
     min-height: 100%;
-    background: no-repeat center/100% auto url("/../public/desktop/image-header.jpg");
+    background: no-repeat center/100% auto url("../public/desktop/image-header.jpg");
     z-index: -1;
   }
   .header-bg .header .hamburger-menu {
@@ -355,7 +355,7 @@ body {
     position: absolute;
     width: 100%;
     min-height: 100%;
-    background: no-repeat center/100% auto url("/../public/desktop/image-graphic-design.jpg");
+    background: no-repeat center/100% auto url("../public/desktop/image-graphic-design.jpg");
     z-index: -1;
   }
   .section-graphic-design-bg .section-graphic-design {
@@ -383,7 +383,7 @@ body {
     position: absolute;
     width: 100%;
     min-height: 100%;
-    background: no-repeat center/100% auto url("/../public/desktop/image-photography.jpg");
+    background: no-repeat center/100% auto url("../public/desktop/image-photography.jpg");
     z-index: -1;
   }
   .section-photography-bg .section-photography {
